--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "swipr",
   "description": "Swipe through horizontal content. Buttons for non-mobile/non-touch devices. Natural swipe for mobile/touch devices",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "homepage": "https://robinpoort.github.io/swipr/",
   "author": "https://github.com/robinpoort/swipr/graphs/contributors",
   "repository": {
@@ -13,8 +13,8 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "caniuse-db": "*",
-    "grunt": "^1.0.1",
+    "caniuse-db": "^1.0.30001119",
+    "grunt": "^1.3.0",
     "grunt-autoprefixer": "^3.0.*",
     "grunt-browser-sync": "^2.2.*",
     "grunt-contrib-cssmin": "^2.2.*",
