--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "grunt": "^1.3.0",
     "grunt-autoprefixer": "^3.0.*",
     "grunt-browser-sync": "^2.2.*",
-    "grunt-contrib-cssmin": "^2.2.*",
-    "grunt-contrib-uglify": "^3.0.1",
-    "grunt-contrib-watch": "^1.0.*",
-    "grunt-sass": "^2.0.*",
+    "grunt-contrib-cssmin": "^3.0.*",
+    "grunt-contrib-uglify": "^5.0.*",
+    "grunt-contrib-watch": "^1.1.*",
+    "grunt-sass": "^3.1.*",
     "jit-grunt": "^0.10.*",
-    "time-grunt": "^1.3.*"
+    "time-grunt": "^2.0.*"
   }
 }
