--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "grunt-contrib-uglify": "^5.0.*",
     "grunt-contrib-watch": "^1.1.*",
     "grunt-sass": "^3.1.*",
-    "jit-grunt": "^0.10.*",
-    "time-grunt": "^2.0.*"
+    "jit-grunt": "^0.10.*"
   }
 }
