--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "swipr",
   "description": "Swipe through horizontal content. Buttons for non-mobile/non-touch devices. Natural swipe for mobile/touch devices",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "homepage": "https://robinpoort.github.io/swipr/",
   "author": "https://github.com/robinpoort/swipr/graphs/contributors",
   "repository": {
@@ -13,13 +13,13 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "caniuse-db": "^1.0.30001119",
-    "diff": ">=3.5.0",
-    "grunt": "^1.3.0",
+    "caniuse-db": "^1.0.30001230",
+    "diff": "^5.0.0",
+    "grunt": "^1.4.1",
     "grunt-autoprefixer": "^3.0.*",
     "grunt-browser-sync": "^2.2.*",
-    "grunt-contrib-cssmin": "^3.0.*",
-    "grunt-contrib-uglify": "^5.0.*",
+    "grunt-contrib-cssmin": "^4.0.*",
+    "grunt-contrib-uglify": "^5.0.1",
     "grunt-contrib-watch": "^1.1.*",
     "grunt-sass": "^3.1.*",
     "jit-grunt": "^0.10.*"
